--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html{
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 body {
@@ -7,10 +7,9 @@ body {
   padding: 0;
   font-family: sans-serif;
   background: url(/img/wp2748622.jpg) no-repeat;
-  background-size: 100%;
   background-position: bottom;
   background-color: #95e8f3;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 form{
